--- a/Thaumium/Thaumium.vcxproj
+++ b/Thaumium/Thaumium.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="Core.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="FrontendOptions.h" />
     <ClInclude Include="hooks.h" />
     <ClInclude Include="NMS\GcApplication.h" />
     <ClInclude Include="NMS\GcNetworkManager.h" />
@@ -158,12 +159,14 @@
     <ClInclude Include="NMS\TkFixedString.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="plugin.h" />
+    <ClInclude Include="switchtable.h" />
     <ClInclude Include="TextChatHandler.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="FrontendOptions.cpp" />
     <ClCompile Include="hooks.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
