--- a/Thaumium/Thaumium.vcxproj
+++ b/Thaumium/Thaumium.vcxproj
@@ -153,12 +153,19 @@
     <ClInclude Include="FrontendOptions.h" />
     <ClInclude Include="hooks.h" />
     <ClInclude Include="memory.h" />
+    <ClInclude Include="NMS\NGuiAnimationEvent.h" />
+    <ClInclude Include="NMS\NGuiInputType.h" />
     <ClInclude Include="NMS\GcApplication.h" />
     <ClInclude Include="NMS\GcNetworkManager.h" />
     <ClInclude Include="NMS\GcNetworkMessageManager.h" />
+    <ClInclude Include="NMS\GcNGuiElement.h" />
+    <ClInclude Include="NMS\GcNGuiText.h" />
     <ClInclude Include="NMS\GcTextChatInput.h" />
     <ClInclude Include="NMS\GcTextChatManager.h" />
+    <ClInclude Include="NMS\ITkNGuiDraggable.h" />
+    <ClInclude Include="NMS\TkBBox2d.h" />
     <ClInclude Include="NMS\TkFixedString.h" />
+    <ClInclude Include="NMS\TkVector2.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="plugin.h" />
     <ClInclude Include="shadowtable.h" />
