Work on option button

--- a/Thaumium/Thaumium.vcxproj
+++ b/Thaumium/Thaumium.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="NMS\TkBBox2d.h" />
     <ClInclude Include="NMS\TkFixedString.h" />
     <ClInclude Include="NMS\TkID.h" />
+    <ClInclude Include="NMS\TkMemoryManager.h" />
     <ClInclude Include="NMS\TkVector2.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="plugin.h" />
