Add NGui Graphic Types

--- a/Thaumium/Thaumium.vcxproj
+++ b/Thaumium/Thaumium.vcxproj
@@ -154,9 +154,15 @@
     <ClInclude Include="FrontendOptions.h" />
     <ClInclude Include="hooks.h" />
     <ClInclude Include="memory.h" />
+    <ClInclude Include="NMS\eAltMode.h" />
+    <ClInclude Include="NMS\eAnimate.h" />
+    <ClInclude Include="NMS\eCurve.h" />
+    <ClInclude Include="NMS\eGradient.h" />
+    <ClInclude Include="NMS\eShape.h" />
     <ClInclude Include="NMS\GcBooleanOption.h" />
     <ClInclude Include="NMS\GcFrontendPageOptions.h" />
     <ClInclude Include="NMS\GcNGuiLayer.h" />
+    <ClInclude Include="NMS\GcNGuiLayerData.h" />
     <ClInclude Include="NMS\GcOption.h" />
     <ClInclude Include="NMS\GcOptionsInteractionContext.h" />
     <ClInclude Include="NMS\GcOptionsMenuState.h" />
@@ -172,11 +178,17 @@
     <ClInclude Include="NMS\GcTextChatManager.h" />
     <ClInclude Include="NMS\ITkNGuiDraggable.h" />
     <ClInclude Include="NMS\TkBBox2d.h" />
+    <ClInclude Include="NMS\TkColour.h" />
+    <ClInclude Include="NMS\TkCurveType.h" />
+    <ClInclude Include="NMS\TkDynamicArray.h" />
     <ClInclude Include="NMS\TkFixedString.h" />
     <ClInclude Include="NMS\TkID.h" />
     <ClInclude Include="NMS\TkMemoryManager.h" />
+    <ClInclude Include="NMS\TkNGuiGraphicStyle.h" />
+    <ClInclude Include="NMS\TkNGuiGraphicStyleData.h" />
     <ClInclude Include="NMS\TkSTLAllocatorShim.h" />
     <ClInclude Include="NMS\TkVector2.h" />
+    <ClInclude Include="NMS\TkVector4.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="plugin.h" />
     <ClInclude Include="TextChatHandler.h" />
