--- a/CMakeLIsts.txt
+++ b/CMakeLIsts.txt
@@ -39,6 +39,7 @@ add_library(ThaumiumDLL SHARED
         "nms/GameComponents/GcNGuiLayer.cpp"
         "nms/GameComponents/GcNGuiLayoutData.h"
         "nms/GameComponents/GcNGuiText.h"
+        "nms/GameComponents/GcNGuiText.cpp"
         "nms/GameComponents/GcNGuiTextData.h"
         "nms/GameComponents/GcOption.h"
         "nms/GameComponents/GcOptionsInteractionContext.h"
@@ -65,7 +66,7 @@ add_library(ThaumiumDLL SHARED
         "nms/ToolKit/TkSTLAllocatorShim.h"
         "nms/ToolKit/TkVector2.h"
         "nms/ToolKit/TkVector4.h"
- "nms/GameComponents/GcNGuiText.cpp")
+ "nms/ToolKit/TkNGuiTypeUndoable.h" "nms/ToolKit/TkNGuiUndoable.h" "nms/ToolKit/TkNGuiGraphicStyleData.cpp")
 
 target_link_libraries(ThaumiumDLL PRIVATE
         ${CMAKE_SOURCE_DIR}/lib/MinHook.x64.lib
