It don't work man

--- a/CMakeLIsts.txt
+++ b/CMakeLIsts.txt
@@ -95,7 +95,7 @@ add_library(ThaumiumDLL SHARED
         "nms/Reality/FrigateFlybyType.h"
         "nms/Atlas/DownloadType.h"
         "nms/NGui/NGuiEditorIcons.h"
-)
+ "modules/nguimbinexport.h" "modules/nguimbinexport.cpp" "nms/ToolKit/TkMetaDataXML.h" "nms/ToolKit/TkLinearMemoryPool.h" "nms/ToolKit/TkMemoryPool.h" "nms/ToolKit/TkBitArray.h" "nms/ToolKit/TkBitArrayStorage.h")
 
 target_link_libraries(ThaumiumDLL PRIVATE
         ${CMAKE_SOURCE_DIR}/lib/MinHook.x64.lib
