Configure new project builds

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -17,7 +17,7 @@
       "configurationType": "RelWithDebInfo",
       "buildRoot": "${projectDir}\\build",
       "installRoot": "${projectDir}\\out\\install\\${name}",
-      "cmakeCommandArgs": "-D CMAKE_CXX_COMPILER=clang++",
+      "cmakeCommandArgs": "-D CMAKE_CXX_COMPILER=clang++ -D USEFRACTAL=ON",
       "ctestCommandArgs": "",
       "inheritEnvironments": [ "msvc_x64_x64" ]
     }
