--- a/CMakeLIsts.txt
+++ b/CMakeLIsts.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_C_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_compile_options(-ggdb)
+OPTION(USEFRACTAL "Compile for Fractal 4.13 Debug" OFF)
 
 # Thaumium
 add_library(ThaumiumDLL SHARED
@@ -97,6 +97,12 @@ add_library(ThaumiumDLL SHARED
         "nms/Atlas/DownloadType.h"
         "nms/NGui/NGuiEditorIcons.h"
  "modules/nguimbinexport.h" "modules/nguimbinexport.cpp" "nms/ToolKit/TkMetaDataXML.h" "nms/ToolKit/TkLinearMemoryPool.h" "nms/ToolKit/TkMemoryPool.h" "nms/ToolKit/TkBitArray.h" "nms/ToolKit/TkBitArrayStorage.h" "modules/curlhook.cpp" "nms/ToolKit/TkStackVector.h" "nms/ToolKit/TkAlignedBlock.h" "nms/GameComponents/GcAtlasTransportWinHttp.h" "nms/Atlas/Http.h" "nms/GameComponents/GcPlayer.h" "nms/Havok/hknpShapeKeyMask.h" "nms/ToolKit/TkVector3.h" "nms/ToolKit/TkFileSystem.h" "nms/Engine/FileOpenMode.h" "nms/Engine/FIOS2HANDLE.h")
+
+IF(USEFRACTAL)
+    target_compile_definitions(ThaumiumDLL PRIVATE FRACTAL=1)
+else()
+    target_compile_definitions(ThaumiumDLL PRIVATE UPSTREAM=1)
+ENDIF(USEFRACTAL)
 
 target_link_libraries(ThaumiumDLL PRIVATE
         ${CMAKE_SOURCE_DIR}/lib/MinHook.x64.lib
